# oculus

./: CMakeLists.txt  README.md
OculusRoomTiny (GL)/: main.cpp
OculusRoomTiny (GL)/Projects/Windows/VS2013/: OculusRoomTiny (GL).sln
VR-basic/: Makefile  glwidget.cpp  glwidget.h  main.cpp  mesh.h  model.h  shader.h  simple.frag  simple.vert  vr-basic.pro
VR-basic/iPhone5S/: iPhone 5S.mtl
apps/: CMakeLists.txt
apps/KalmanFilter/: CMakeLists.txt
apps/KalmanFilter/src/: KalmanFilter.cpp
apps/MovingCube/: CMakeLists.txt
apps/MovingCube/button2/: button2.mtl
apps/MovingCube/iPhone5S/: Thumbs.db  iPhone 5S.mtl
apps/MovingCube/inc/: Win32_GLAppUtil.h
apps/MovingCube/includes/: extractFeatures.h
apps/MovingCube/includes/LibOVRKernelSrc/Util/Shaders/: Blt_vs.h
apps/MovingCube/includes/PCSDKinclude/: pxcdefs.h  pxcemotion.h  pxcimage.h  pxcprojection.h  pxcpulseestimator.h  pxcvoice.h
apps/MovingCube/includes/PCSDKsamplecommoninclude/: util_capture.h  util_capture_file.h
apps/MovingCube/includes/other/: camera.h  mesh.h  model.h  shader.h
apps/MovingCube/instrument/: Thumbs.db  instrument.mtl
apps/MovingCube/lib/mdd/: LibOVR.lib  libpxc_d.lib
apps/MovingCube/lib/mtd/: LibOVR(old).lib
apps/MovingCube/model/: 1-2.model  1-3.model  1-4.model  1-5.model  2-3.model  2-4.model  2-5.model  3-4.model  3-5.model  4-5.model  cluster.txt
apps/MovingCube/shader/: shader.vs  shader150.frag  shader150.vs
apps/MovingCube/src/: MovingCubeExample.cpp  main.cpp
apps/OculusMinimalExample/: CMakeLists.txt
apps/OculusMinimalExample/src/: OculusMinimalExample.cpp
apps/walalaExample/: CMakeLists.txt
apps/walalaExample/src/: walalaExample.cpp
cmake/: FindGLEW.cmake  FindGLFW.cmake  FindOculusSDK.cmake  FindOvrvisionSDK.cmake  FindPCSDK.cmake
include/LibOVRKernelSrc/Tracing/: install.cmd
include/LibOVRKernelSrc/Util/Shaders/: Blt_ps.h
include/PCSDKinclude/: pxccapture.h  pxcsession.h
include/PCSDKinclude/service/: pxcsmartasyncimpl.h
include/PCSDKsamplecommoninclude/: util_pipeline.h  util_pipeline_emotion.h  util_pipeline_raw.h
lib/mdd/: libpxc.lib
lib/mtd/: LibOVR.lib  libpxc_d.lib
modules/: CMakeLists.txt
modules/Oculus/: CMakeLists.txt
modules/Oculus/inc/: OculusBase.h  OculusSampleScene.h  OculusScene.h
modules/Oculus/src/: OculusBase.cpp  OculusSampleScene.cpp  OculusScene.cpp
modules/OvrModule/: CMakeLists.txt
modules/OvrModule/inc/: OvrClass.h
modules/OvrModule/src/: OvrClass.cpp
modules/walala/: CMakeLists.txt
modules/walala/inc/: hands.h  walala.h
modules/walala/src/: hands.cpp  walala.cpp
