cmake_minimum_required(VERSION 2.8)
project (MovingCube)

set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set (PROJECT_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/inc)
set (PROJECT_LIB_MDD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/mdd)
set (LIBOVR_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/includes/LibOVRInclude)
set (LIBOVRKERNEL_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/includes/LibOVRKernelSrc)
set (PCSDK_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/includes/PCSDKinclude)
set (PCSDK_SAMPLE_COMMON_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/includes/PCSDKsamplecommoninclude)

set(PROJECT_SRCS 
${PROJECT_SOURCE_DIR}/main.cpp
)

IF (WIN32)
	SET(CMAKE_DEBUG_POSTFIX d)
ENDIF()

#find_package( OculusSDK REQUIRED )
#find_package( PCSDK REQUIRED )
# Look for the library.
FIND_LIBRARY(OCULUS_SDK_LIBRARY_DEBUG NAMES LibOVR HINTS ${PROJECT_LIB_MDD_DIR} )
FIND_LIBRARY(OCULUS_SDK_LIBRARY_KERNEL_DEBUG NAMES LibOVRKernel HINTS ${PROJECT_LIB_MDD_DIR} )
SET(OCULUS_SDK_LIBRARIES ${OCULUS_SDK_LIBRARY_DEBUG} ${OCULUS_SDK_LIBRARY_KERNEL_DEBUG})
FIND_LIBRARY(PCSDK_LIBRARY_DEBUG NAMES libpxc_d HINTS ${PROJECT_LIB_MDD_DIR} )
FIND_LIBRARY(PCSDK_SAMPLE_LIBRARY_DEBUG NAMES libpxcutils_d HINTS ${PROJECT_LIB_MDD_DIR} )
SET(PCSDK_LIBRARIES ${PCSDK_LIBRARY_DEBUG} ${PCSDK_SAMPLE_LIBRARY_DEBUG})
MESSAGE(${OCULUS_SDK_LIBRARIES})
MESSAGE(${PCSDK_LIBRARIES})

#include_directories(${OCULUS_SDK_INCLUDE_DIRS})
include_directories(${PROJECT_INC_DIR})
include_directories(${LIBOVR_INCLUDE_DIR})
include_directories(${LIBOVRKERNEL_SRC_DIR})
include_directories(${PCSDK_INCLUDE_DIR})
include_directories(${PCSDK_SAMPLE_COMMON_INCLUDE_DIR})

add_executable(${PROJECT_NAME} ${PROJECT_SRCS})

target_link_libraries (${PROJECT_NAME} ${OCULUS_SDK_LIBRARIES})
target_link_libraries (${PROJECT_NAME} ${PCSDK_LIBRARIES})